--- a/app/src/main/res/values/steps.xml
+++ b/app/src/main/res/values/steps.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
 	<string-array name="tasty_oli_for_fish">
@@ -554,6 +554,93 @@
 	<item> После варки куски стерляди выложить в глубокое блюдо или салатник и накрыть салфеткой. </item>
 	<item>В бульон положить размоченную желатину и размешивать ее до растворения. </item>
 	<item>Осветлив желе паюсной или зернистой икрой так же, как уху, процедить его, охладить и залить им стерлядь. Перед заливкой украсить куски стерляди листиками зелени петрушки, раковыми шейками или кусочками крабов.</item>
+</string-array>
+
+<string-array name="klubnichniy_koktail">
+	<item>Смешать все ингредиенты. Получившуюся массу взбить.</item>
+	<item>Чем больше ягод — тем гуще коктейль. Кто любит более жидкие и пенистые коктейли берите немного клубники и молоко невысокой (!) жирности.</item>
+</string-array>
+
+<string-array name="tomatniy_sup_pure">
+	<item>В сотейник режим кольцами лук, перец, давим чеснок и в оливковом масле пассируем до появления запаха.</item>
+	<item>Добавляем очищенные от кожицы и нарезанные на кусочки помидоры. Тушим все в собственном соку, если сока от помидор не хватает, добавьте полстакана бульона (или воды, или томатного сока). Солим, перчим, добавляем других приправ на ваш вкус.</item>
+	<item>Когда все овощи станут мягкими (минут через 15), снимите с плиты и дайте немного остыть. Если есть лишняя жидкость удалите ее (я люблю супы погуще и удаляю почти всю жидкость, вы регулируйте количество жидкости на свой вкус) остальное переместите в блендер. Смешайте все до однородности. Вот и все, суп-пюре готов!</item>
+</string-array>
+
+<string-array name="domashnee_morojenoe_iz_kivi">
+	<item>Сделать сироп. Смешать 1 стакан воды с сахаром в небольшой кастрюле и довести до кипения. Затем сразу снять с плиты и дать остыть.</item>
+	<item>Сделать мороженое-лед. Почистить киви и поместить его в комбайн. Превратив киви в пюре, добавляем сироп и сок лайма. Мешаем в комбайне около 1 минуты. Выливаем смесь в формочки для мороженного и замораживаем в морозильнике.</item>
+</string-array>
+
+<string-array name="chayniye_yaytsa">
+	<item>Берем нужное вам количество яиц, чуть-чуть бьем по их скорлупе ножом, чтобы были трещинки и кладем в кипящую воду вместе с чайным пакетиком и варим минут 9-15. </item>
+	<item>Бить по скорлупе можно и в процессе варке, но нужно делать это аккуратно. </item>
+</string-array>
+
+<string-array name="salat_iz_svekli_sira_gr_orehov">
+	<item>Отвариваем свеклу до готовности минут 20 (можно порезать пополам). Остужаем ее и натираем на терке в большую миску.</item>
+	<item>Давим чеснок (можно натереть на мелкой терке) и равномерно вмешиваем к свекле.</item>
+	<item>Натираем на терке сыр и добавляем к свекле. Солим, добавляем майонез (по вкусу), порезанные грецкие орешки. Все тщательно перемешиваем. Пробуем, если все устраивает (салат должен получится чуть терпким и пикантным), то помещаем салат в холодильник на час, два.</item>
+</string-array>
+
+<string-array name="tvorojno_mork_zapekanka">
+	<item>Отвариваем морковь (можно ее предварительно порезать пополам). Через 15-20 минут, когда морковь будет готова, достаем, охлаждаем и натираем на терке. Если вы любите текстурную запеканку — то на большой, а если более мягкую — то трем на маленькой терке. Складываем натертую морковку в глубокую посуду.</item>
+	<item>К потертой морковке добавляем творог, яйца, сахар и соль. Все тщательно перемешиваем.</item>
+	<item>Складываем получившуюся смесь в любую форму (предварительно смазанную маслом). Выравниваем ложкой.</item>
+	<item>Ставим запеканку в предварительно разогретую духовку на 30-40 минут. Температура запекания 180 градусов..</item>
+	<item>Советы: Поглядывайте, чтобы запеканка не подгорела, если она еще не готова, но стала подгорать, выключите плиту и потомите ее в духовке. Кушать запеканку лучше после охлаждения, добавив сметану или взбитые сливки. Я добавила в запеканку несколько размельченных грецких орехов, вкус ее стал более пикантным. Если творог сладкий, то сахар можно не добавлять. Если творог не сладкий, то лучше добавить пару ложек сахара.</item>
+</string-array>
+
+<string-array name="salat_iz_pomidorov_i_yaits">
+	<item>В салатник выложить смесь из нарезанных небольшими дольками помидоров и яиц. </item>
+	<item>Сметану тщательно смешать с солью и рубленой зеленью (если вы любите чесночный соус добавьте раздавленные пол головки чеснока). </item>
+	<item>Яйца и помидоры залить полученным соусом. Готовый салат советуем украсить дольками помидоров и зеленью.</item>
+</string-array>
+
+<string-array name="salat_iz_pomidor_s_brinzoy">
+	<item>Помидоры нарезать дольками, перец — соломкой, брынзу натереть на крупной терке.</item>
+	<item>Все смешать, посолить, посыпать нарезанной зеленью петрушки.</item>
+</string-array>
+
+<string-array name="italyanskiy_salat_s_makaronami">
+	<item>Отварить макароны, остудить их. Добавить мелко нарезанные огурец, лук, помидоры, тонко порезанную ветчину (колбасу, куру) и нарезанный пластинками сыр.</item>
+	<item>Приготовить соус из вышеперечисленных ингредиентов. Залить блюдо соусом, перемешать и подать к столу. Можно при желании украсить салат оливками.</item>
+	<item>Советы: Если нет времени или желания готовить соус, его можно заменить на обычный майонез. Салат будет вкусный.      По идее салат должен остыть, но горячий он легко превращается во второе блюдо.</item>
+</string-array>
+
+<string-array name="kartofelnoe_pyre">
+	<item>Положите очищенный картофель в большую кастрюлю с соленой водой. Накройте кастрюлю крышкой, доведите до кипения и варите, пока картофель не станет мягким (около 20-25 мин.). </item>
+	<item>Слейте воду, раздавите картошку. Растопите масло с молоком в маленькой кастрюльке (или нагреть их в микроволновке). Перелейте все в пюре.</item>
+	<item>Деревянной ложкой взбивать пару минут. Разогреть, если необходимо, и приправить солью и перцем. Подавать пюре нужно сразу.</item>
+</string-array>
+
+<string-array name="garnir_iz_kartofelya_k_blydam_iz_farsha">
+	<item>Нарезать картофель кубиками средней величины. Жарить почти до готовности.</item>
+	<item>Смешать с морковью, мелко нарезанным луком, пассерованным томат-пюре, тушить до готовности.</item>
+	<item>В конце тушения добавить лавр, перец, соль.</item>
+</string-array>
+
+<string-array name="garnir_pyre_iz_goroshka_k_kotletam">
+	<item>Отварить 450 гр свежего или замороженного горошка до мягкости.</item>
+	<item>Положить в кухонный комбайн, добавить 150 гр сметаны и сделать пюре. </item>
+	<item>Вернуть в кастрюлю, хорошо приправить и подогреть. Посыпать свежим укропом или петрушкой и подавать.</item>
+</string-array>
+
+<string-array name="citrusoviy_desert_s_saharom_i_vinom">
+	<item>Очищенные от кожицы и нарезанные кружочками апельсины или мандарины (последние можно разделить на дольки) положить горкой в вазочку, посыпать сахаром и залить вином—розовым мускатом или портвейном.</item>
+	<item>Сахарный песок или сахарную пудру можно подать на розетке отдельно. Время приготовления 10 мин.</item>
+</string-array>
+
+<string-array name="zapechennaya_kartoshka_v_kojure">
+	<item>Тщательно моем молодую картошку, чистим щеточкой (или чистой губкой для посуды). </item>
+	<item>Делаем проколы вилкой, кладем на смазанный маслом противень, и запекаем в духовке при температуре 180 градусов в течение часа (если картофель средний и крупный). Обязательно проверяйте ножом готовность картофеля.</item>
+</string-array>
+
+<string-array name="zapechenniye_kartofelnie_dolki">
+	<item>Тщательно моем молодую картошку, чистим щеточкой. Нарезаем картофель на 4-8 долек, сначала на половинки затем на четвертинки.</item>
+	<item>Кладем картофель в кастрюлю, заливаем холодной водой, немного соли, доводим до кипения (с закрытой крышкой) и варим в кипящей воде 2 минуты (с открытой крышкой). </item>
+	<item>Сливаем воду (выложив картофель в сито) и даем картофелю немного остыть. Прогреваем духовку до 220C. Застелем противень фольгой и смазываем оливковым маслом. Можно смешать оливковое масло с травами, чесночным порошком, острым перцем и вывалять в нем картофельные дольки. </item>
+	<item>Выложить дольки на противень, острым кончиком вверх. Посыпать крупной солью и чёрным перцем. Запекать до зарумянивания 20-25 минут.</item>
 </string-array>
 
 </resources>
