--- a/app/src/main/res/values/steps.xml
+++ b/app/src/main/res/values/steps.xml
@@ -643,4 +643,65 @@
 	<item>Выложить дольки на противень, острым кончиком вверх. Посыпать крупной солью и чёрным перцем. Запекать до зарумянивания 20-25 минут.</item>
 </string-array>
 
+<string-array name="vegetariansky_pinkberry">
+	<item>Возьмите обычный или ароматизированный йогурт, на ваш выбор. Смешайте его с сахаром в мороженице.</item>
+	<item>Полученную смесь поместите в морозилку для затвердевания.</item>
+</string-array>
+
+<string-array name="arahiso_banan_morojenoe">
+	<item>Возьмите спелые бананы, нарежьте их на небольшие кусочки и поместите в холодильник на 2 часа. </item>
+	<item>После сделайте из них пюре при помощи блендера или кухонного комбайна. В полученное пюре добавьте арахисовое масло и взбейте до необходимой консистенции. </item>
+	<item>Блюдо можно подавать сразу или охладить, чтобы получилось застывшее мороженое.</item>
+</string-array>
+
+<string-array name="klubnichnaya_pomadka">
+	<item>Чтобы приготовить клубничную помадку, необходимо растопить белый шоколад в микроволновке. </item>
+	<item>Когда шоколад растает, смешайте его с клубничной глазурью. Если вы желаете получить из клубничной помадки забавные фигурки, поместите её в пресс-формочки.</item>
+</string-array>
+
+<string-array name="shokoladnie_tryfeli">
+	<item>Вначале взбейте сливочный сыр и растопите шоколад на сковороде или в микроволновке. </item>
+	<item>Хорошо перемешайте оба ингредиента в течение 30 секунд. Сформируйте небольшие шарики и поместите их в холодильник на час для затвердевания.</item>
+	<item> Затем растопите дополнительную порцию шоколада. Достаньте шоколадные заготовки из холодильника и окуните их по одной в расплавленный шоколад. Шоколадные трюфели готовы.</item>
+</string-array>
+
+<string-array name="syrnye_chipsi">
+	<item>Сыр чеддер необходимо натереть на тёрке (подойдёт любой другой сыр твёрдых сортов) и выложить на противень, застеленный бумагой для запекания.</item>
+	<item>Формируем из него кружочки и выпекаем при температуре 190 градусов в течение 5 минут.</item>
+</string-array>
+
+<string-array name="ovsyanoe_pechenie">
+	<item>Овсяные хлопья и очищенные бананы поместите в миску и разомните их до однородной клейкой консистенции. </item>
+	<item>Получившуюся массу выложите на противень, формируя круглые печенья, и запекайте при температуре 170 градусов в течение 15 минут.</item>
+</string-array>
+
+<string-array name="biskviti">
+	<item>В миске смешайте самовосходящую муку (мука с добавлением разрыхлителя) и молоко. </item>
+	<item>Получившейся смесью заполните формочки для выпечки и выпекайте бисквиты при температуре 230 градусов около 20 минут.</item>
+</string-array>
+
+<string-array name="makaruni">
+	<item>Смешайте в миске сгущённое молоко с добавлением кокосовой стружки до тех пор, пока смесь не станет липкой. </item>
+	<item>Сформируйте небольшие шарики и поджарьте их в течение одной минуты. Готовые кокосовые шарики должны стать подрумяненными.</item>
+</string-array>
+
+<string-array name="tyshemiy_kartofel_s_ovowami">
+	<item>Картофель, морковь очистить, помыть и нарезать дольками или кубиками.</item>
+	<item>Уложив в посуду, посыпать специями и жареным луком, залить соусом и тушить на медленном огне до готовности (около 20 минут). </item>
+	<item>При подаче к столу посыпать рубленой зеленью.</item>
+</string-array>
+
+<string-array name="gribi_i_kartofel_zapechenniy_v_duhovke">
+	<item>Если картофель молодой, то его можно не чистить, просто очень хорошо помыть и почистить щеткой. Грибы помыть, нарезать тонкими пластинками, ошпарить.</item>
+	<item>Картошку тонко порезать поперек, но не до конца, чтобы получилась «картофельная гармошка». В картофельные разрезы вложить по кусочку шампиньона. </item>
+	<item>«Нафаршированный» картофель уложить в форму для запекания, посыпать укропом. На каждую картофелину положить по маленькому кусочку сливочного масла. Картофель запекать в духовке в закрытой форме около получаса. </item>
+	<item>Потом форму открыть, картофель смазать сливочным маслом и запекать до готовности. Перед подачей печеный картофель посолить и посыпать мелко нарубленным чесноком и укропом.</item>
+</string-array>
+
+<string-array name="kartofel_so_svininoy">
+	<item>Сырой картофель нашинковать соломкой, смешать с пропущенным через мясорубку вареным мясом и жареным луком. </item>
+	<item>Полученную массу положить на смазанную маслом сковороду, разровнять, посыпать мукой, полить бульоном, сверху посыпать сухарями и тертым сыром.</item>
+	<item>Запекать около 20 мин. в хорошо разогретой духовке. Подать на стол с растопленным маслом, добавить зелень по желанию.</item>
+</string-array>
+
 </resources>
