--- a/app/src/main/res/layout/card_material_recipe_noimage.xml
+++ b/app/src/main/res/layout/card_material_recipe_noimage.xml
@@ -31,8 +31,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:visibility="visible"
-                android:src="@drawable/fill_noimage" />
+                android:visibility="visible" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -40,7 +39,7 @@
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:id="@+id/avlRcpNameTV"
                 android:gravity="left"
-                android:textSize="25sp"
+                android:textSize="25dp"
                 android:text="Roast beef"
                 android:visibility="visible"
                 android:singleLine="true"
@@ -49,9 +48,10 @@
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
-                android:textColor="@color/white"
+                android:textColor="#434343"
                 android:focusableInTouchMode="false"
-                android:fontFamily="sans-serif-condensed" />
+                android:fontFamily="sans-serif-condensed"
+                android:textIsSelectable="false" />
 
         </RelativeLayout>
 
