--- a/app/src/main/res/layout/card_view_note.xml
+++ b/app/src/main/res/layout/card_view_note.xml
@@ -32,13 +32,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Подготовка"
+            android:text="Шаги"
             android:id="@+id/textView2"
-            android:paddingLeft="40dp"
+            android:paddingLeft="25dp"
+            android:textAlignment="center"
             android:layout_below="@+id/timeText"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:paddingTop="10dp" />
+            android:paddingTop="10dp"
+            android:paddingRight="25dp"
+            android:layout_marginLeft="37dp" />
 
         <View
             android:layout_width="fill_parent"
@@ -115,20 +116,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Не треб."
-            android:id="@+id/textView6"
+            android:text="3"
+            android:gravity="center"
+            android:id="@+id/steps_in_preview_tv"
             android:fontFamily="sans-serif-condensed"
             android:layout_above="@+id/textView2"
             android:layout_alignRight="@+id/textView2"
             android:layout_alignEnd="@+id/textView2"
-            android:textColor="#FF9800" />
+            android:textColor="#FF9800"
+            android:layout_alignLeft="@+id/textView2"
+            android:layout_alignStart="@+id/textView2" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="Готовка"
-            android:id="@+id/textView7"
+            android:id="@+id/measure_of_time_preview"
             android:layout_below="@+id/timeText"
             android:layout_centerHorizontal="true"
             android:paddingTop="10dp" />
