--- a/app/src/main/res/layout-v21/card_view_ingregient_color.xml
+++ b/app/src/main/res/layout-v21/card_view_ingregient_color.xml
@@ -13,15 +13,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:background="@color/red"
-            android:id="@+id/separator"
-            android:saveEnabled="false"
-
-            android:layout_marginLeft="100dp" />
-
         <TextView
             android:id="@+id/name_of_ingredient_tv"
             android:layout_width="match_parent"
@@ -29,22 +20,11 @@
             android:layout_alignParentTop="true"
             android:textColor="@android:color/black"
             android:textSize="24sp"
-        android:fontFamily="sans-serif-condensed"
-        android:text="Яблоко"
-            android:layout_toRightOf="@+id/separator"
-            android:gravity="center_vertical|left"
-            android:paddingLeft="15dp"
+            android:fontFamily="sans-serif-condensed"
+            android:text="Яблоко"
+            android:gravity="center"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
-
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="50dp"
-            android:id="@+id/imageView3"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:background="@color/chosenElement"
-            android:scaleType="centerCrop" />
 
     </RelativeLayout>
 
